--- a/com-project-clean/src/main/resources/templates/admin/vacation/registVacation.html
+++ b/com-project-clean/src/main/resources/templates/admin/vacation/registVacation.html
@@ -69,6 +69,7 @@
         <div class="confirmDateContainer">
   
     </div>
+    <form id="vacationForm" action="registVacation/run" method="post">
       <table class="tg2 confirmTable" style="table-layout: fixed; width: 588px">
         <colgroup>
           <col style="width: 186px">
@@ -80,6 +81,7 @@
             <td class="tg2-amwm">결재 신청 날짜</td>
             <td class="tg2-amwm" colspan="2">
               <div width="50px" th:text="${today}"></div>
+              <input style="display: none;" name="requestDate" th:value="${today}">
             </td>
           </tr>
         </thead>
@@ -117,8 +119,10 @@
             </thead>
             <tbody>
               <tr>
+              	<input style="display: none;" name="adminNo" th:value="${admin.adminNo}">
                 <td class="tg3-7btt">성명</td>
                 <td class="tg3-7btt" th:text="${admin.adminName}"></td>
+                <input style="display: none;" name="requestAdmin" th:value="${admin.adminName}">
               </tr>
               <tr>
                 <td class="tg3-7btt">직급</td>
@@ -127,7 +131,7 @@
               <tr>
                 <td class="tg3-7btt">휴가명</td>
                 <td class="tg3-7btt">
-                	<select required>
+                	<select required id="vacationName" name="vacationName">
                 		<option>연차</option>
                 		<option>공가</option>
                 		<option>경조사</option>
@@ -137,7 +141,7 @@
               </tr>
               <tr>
                 <td class="tg3-7btt">기간</td>
-                <td class="tg3-7btt"><input type="date" value="xxx" min="한달 후" max="올해" required> ~ <input type="date" value="xxx" min="한달 후" max="올해" required></td>
+                <td class="tg3-7btt"><input type="date" id="vacationStartDate" name="vacationStartDate" min="vacationStartDate" required> ~ <input type="date" id="vacationEndDate" name="vacationEndDate" value="xxx" min="한달 후" max="올해" required></td>
               </tr>
               <tr>
                 <td class="tg3-7btt">연락망</td>
@@ -145,7 +149,7 @@
               </tr>
               <tr>
                 <td class="tg3-7btt"><div class="reason">사유</div></td>
-                <td class="tg3-7btt"><div class="reason"> <textarea class="vacationReason" required></textarea></div></td>
+                <td class="tg3-7btt"><div class="reason"> <textarea class="vacationReason" id="vacationReason" name="vacationReason" required></textarea></div></td>
               </tr>
               <tr>
                 <td class="tg3-7btt" colspan="2">위와 같이 휴가를 신청하오니 승인하여 주시기 바랍니다.</td>
@@ -156,35 +160,38 @@
           <button type="button" id="vacationSubmit">신청</button>
       </div>
     </div>
-    
+   </form> 
     <script>
 		$("#vacationSubmit").click(function(){
 		 		
-		 		const phone1 = $("#adminPhone1").val();
-		 		const phone2 = $("#adminPhone2").val();
-		 		const phone3 = $("#adminPhone3").val();
-		  		const email = $("#email").val();
-		 		const domain = $("#domain").val();
+		 		const name = $("#vacationName").val();
+		 		const start = $("#vacationStartDate").val();
+		 		const end = $("#vacationEndDate").val();
+		  		const reason = $("#vacationReason").val();
+		
 		 		
 		 		// 이미지 나중에 추가
 		 		const addressDetail = $("#addressDetail").val();
 		 		
-		 			if(!(phone2 && phone3 && email && addressDetail)){
+		 			if(!(name && start && end && reason)){
 		 				alert("입력되지 않은 항목이 있습니다.");
 		 			}else{
-		 			if(confirm("수정하시겠습니까?")){
-		 				$('#adminPhone').attr('value', phone1 +"-"+ phone2 +"-"+ phone3 );
-		 				$('#adminEmail').attr('value', email + "@" + domain); 
-		 				$("#modifyForm").submit();
+		 			if(confirm("휴가를 신청하시겠습니까?")){
+		 				$("#vacationForm").submit();
 		 				
 		 			}
 		 		}
 		 	})  
 		 	$("#resetButton").click(function(){
-		 		if(confirm("초기화 하시겠습니까?")){
-		 			document.getElementById("modifyForm").reset();
+		 		if(confirm("휴가 신청을 초기화 하시겠습니까?")){
+		 			document.getElementById("vacationForm").reset();
 		 		}
 		 	})
+
+
+
     </script>
+    
+  
 </body>
 </html>
