--- a/com-project-clean/src/main/resources/templates/admin/vacation/standbyVacationDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/vacation/standbyVacationDetail.html
@@ -173,6 +173,8 @@
           
           </table>
           <input type="submit" value="승인"> <input type="reset" value="반려">
+          
+          <input style="display: none;" name="adminNo" th:value="${adminNo}">
       </div>
     </div>
     
