--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
@@ -75,7 +75,7 @@
 		    
 	    	document.getElementById("denial").onclick = function(){
 	    		
-				if(confirm("해당 직원에게 블랙리스트 경고 횟수를 추가하시겠습니까? /n 직원에게 알림이 전송됩니다.")){
+				if(confirm("해당 직원에게 블랙리스트 경고 횟수를 추가하시겠습니까? 직원에게 알림이 전송됩니다.")){
 	    			
 	    			$("#sendingMessage").val("체크리스트가 재반려되었습니다. 블랙리스트 경고 횟수가 증가합니다.")
 	    			
