--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectAcceptCheckList.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectAcceptCheckList.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 	
-	<div th:include="common/header.html"></div>
+	<div th:include="common/header.html"></div> 
 	<div th:include="common/checkListAside.html"></div>
 
 	<script>
@@ -30,22 +30,8 @@
 			alert(Message)
 		}
 	</script>	
-	<form name = "searchValue" id="searchAcceptCheckList">
 	
-		<span>체크리스트 조회</span>
-		<select name ="category" id="category">
-			<option value="all" selected>전체</option>
-			<option value="employeeName">재직자 아이디</option>
-			<option value="customerName">고객 이름</option>
-		</select>
-		
-		<input type="text" name="categoryValue" id="categoryValue" placeholder="검색">
-		<input type="text" style="display: none;">
-		
-		<button type="button" id="search" onclick="search();">검색</button>
-		<input type="hidden" value="0" name=page>
-		
-	</form>
+	<input type="hidden" value="0" name=page>
 	
 	<table id="taskInfo">
 		<thead>
@@ -71,45 +57,46 @@
 	</div>
 	
 	<script>
+			
+		$(document).ready(function(){
+			checkListFunction();
+		});
 		
 		function returnPage(category, categoryValue, page){
+			
 			var queryString ={"category" : category
 					, "categoryValue" : categoryValue
 					, "page" : page};
 			checkListFunction(queryString);
+			
 		}
 		
-	</script>
-<!-- 
-	<table>
-		<tr th:each="checkList : ${ checkList }">
-			<td th:text="${ checkList.checkReservationNo }"></td>
-		</tr>
-	</table>
-
- -->	
- 	<input type="hidden" th:value="${selectCriteria.limit}" class="selectCriteria">
-	
-	<script>
-	
-	$(document).ready(function(){
+		function checkListFunction(queryString){
 			$.ajax({
 				url : "select",
-				method : "post",
-				success:function(data){
+				data : queryString,
+				type : "POST",
+				success : function(data){
 					const $table = $("#taskInfo tbody");
-					$table.html("");
-					const limit = indexSize;
+					const $div = $("#paging");
 					
-					for(index in data){
-							
+					$table.html("");
+					$div.html("");
+					
+					category=data.category;
+					categoryValue=data.categoryValue;
+					
+					for(var index in data.checkList){
+						
 						$tr = $("<tr>");
-						$checkReservationNoTd = $("<td1>").addClass('rn').text(data[index].checkReservationNo);
-						$checkStatusTd = $("<td>").text(data[index].checkStatus);
-						$checkUserNameTd = $("<td>").text(data[index].customerName);
-						$checkEmployeeNameTd = $("<td>").text(data[index].employeeName);
-						$checkAdminNameTd = $("<td>").text(data[index].adminName);
+						$checkReservationNoTd = $("<td1>").addClass('rn').text(data.checkList[index].checkReservationNo);
+						$checkStatusTd = $("<td>").text(data.checkList[index].checkStatus);
+						$checkUserNameTd = $("<td>").text(data.checkList[index].customerName);
+						$checkEmployeeNameTd = $("<td>").text(data.checkList[index].employeeName);
+						$checkAdminNameTd = $("<td>").text(data.checkList[index].adminName);
 						$buttonTd = $("<button></button>").addClass('btn').addClass([index]).append("상세보기");
+						
+						console.log($checkReservationNoTd)
 						
 						$tr.append($checkReservationNoTd);
 						$tr.append($checkStatusTd);
@@ -118,38 +105,68 @@
 						$tr.append($checkAdminNameTd);
 						$tr.append($buttonTd);
 						$table.append($tr);
-							
-						};
-				},
-				
-				error:function(error){
-					console.log(error);
-				}
-			});
-			
- 			setTimeout(function() {
-				const buttons = document.querySelectorAll('table#taskInfo tbody tr button');
-				
-				for(let i = 0; i < buttons.length; i++) {
+					};
 					
-					const button = buttons[i];
+					var $startPage = data.startPage;
+					var $endPage = data.endPage;
+		            var $currentPage = data.currentPage;
+		            var $maxPage = data.maxPage;
+		               
+		            var $beforeStartPage = data.startPage-1;
+		            var $afterEndPage = data.endPage;
+		            
+		            if($startPage == 0){
+		            	$button = $("<button class='page' disabled>◀◀</button>");
+		                  $div.append($button);
+		               } else {
+		                  $button = $("<button class='page' id='goBackPage' onclick='returnPage(category,categoryValue,"+$beforeStartPage+")'>◀◀</button>");
+		                  $div.append($button);
+		               }
+		               
+		               for(i=$startPage;i<$endPage;i++){
+		                  if(i!=$currentPage){
+		                     $button = $("<button class='page' onclick='returnPage(category,categoryValue,"+(i)+")'>"+(i+1)+"</button>");   
+		                  } else {
+		                     $button = $("<button disabled class='page'>"+(i+1)+"</button>");
+		                  }
+		                  
+		                  $div.append($button);
+		               }
+		               
+		               if($maxPage==$endPage){
+		                  $button = $("<button class='page' disabled>▶▶</button>");
+		                  $div.append($button);
+		               } else {
+		                  $button = $("<button class='page' id='goForwardPage' onclick='returnPage(category,categoryValue,"+$afterEndPage+")'>▶▶</button>");
+		                  $div.append($button);
+		               }
+		               
+		            },
+		            error : function(error){
+		               console.log(error);
+		            }
+		         });
+			};
+		      
+	 			setTimeout(function() {
+					const buttons = document.querySelectorAll('table#taskInfo tbody tr button');
 					
-					button.onclick = function() {
+					for(let i = 0; i < buttons.length; i++) {
 						
-						const resNo1 = document.querySelectorAll('table#taskInfo tbody tr td1');
-						const resNo2 = resNo1[i];
-						var resNo3 = resNo2.parentNode.querySelector('.rn').innerText;
+						const button = buttons[i];
 						
- 					 	location.href="/admin/checklist/acceptSelectDetails?re="+ resNo3; 
-							
-					}; 
-				};						
+						button.onclick = function() {
+							const resNo1 = document.querySelectorAll('table#taskInfo tbody tr td1');
+							const resNo2 = resNo1[i];
 
-			}, 1000)});
-			
-   	</script>
-   	
-<!--    	<div th:replace="admin/checkList/paging.html"></div> -->
+							var resNo3 = resNo2.parentNode.querySelector('.rn').innerText;
+	 					 	location.href="/admin/checklist/acceptSelectDetails?re="+ resNo3; 
+								
+						}; 
+					};						
 
+				}, 1000);
+	</script>
+	
 </body>
 </html>
